a lot of things

--- a/lindex.html
+++ b/lindex.html
@@ -9,14 +9,15 @@
 
 	<body>
 		<canvas id="canvas"></canvas>
-		
-	    <!-- CDN Link to Three.js -->
 		<script src="libs/threejs/build/three.js"></script>
+		<script src="libs/threejs/examples/js/controls/PointerLockControls.js"></script>
 
-	    <!-- Link all other js files below -->
 		<script src="js/components/room.js"></script>
-	    <script src="js/SceneManager.js"></script>
-	    <script src="js/main.js"></script>
+		<script src="js/components/rock.js"></script>
+		<script src="js/components/player.js"></script>
+		<script src="js/SceneManager.js"></script>
+		<script src="js/main.js"></script>
+
 	</body>
 </html>
 
