--- a/lindex.html
+++ b/lindex.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset=utf-8>
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<title>Escape room</title>
-		<link rel="stylesheet" href="css/style.css"> 
+		<title>Ice room escape</title>
+		<style>
+			body {
+				background-image: url("assets/utils/index.png ");
+				background-size: 100%;
+			}
+		</style>
+		<link rel="stylesheet" type="text/css" href="css/win.css"> 
 	</head>
 
 	<body>
-		<canvas id="canvas"></canvas>
-		<script src="libs/threejs/build/three.js"></script>
-		<script src="libs/threejs/examples/js/controls/PointerLockControls.js"></script>
-
-		<script src="js/components/room.js"></script>
-		<script src="js/components/rock.js"></script>
-		<script src="js/components/player.js"></script>
-		<script src="js/SceneManager.js"></script>
-		<script src="js/main.js"></script>
-
+		<script>
+			function loadGame() {
+				window.location.href = "./game.html";
+			}
+		</script>
+		<div id="index">
+			<button class="button" onclick="loadGame()">START</button>
+		</div>
 	</body>
 </html>
 
