--- a/victory.html
+++ b/victory.html
@@ -15,7 +15,7 @@
 
     <script>
         function Home() {
-            window.location.href = "./lindex.html";
+            window.location.href = "./index.html";
         }
         function Restart() {
             window.location.href = "./game.html";
